feat: finish teacher-application page

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
-              <a class="nav-link mx-2" href="#!"
+              <a class="nav-link mx-2" href="teacher/application.html"
                 ><i class="fas fa-heart pe-2"></i>成為教師</a
               >
             </li>
@@ -81,7 +81,6 @@
     <footer class="footer text-center text-lg-start">
       <!-- Copyright -->
       <div class="text-center p-3">© 2023 Copyright: RayChen</div>
-      <!-- Copyright -->
     </footer>
   </body>
   <!-- Bootstrap -->
