--- a/wwwroot/teacher/application.html
+++ b/wwwroot/teacher/application.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">LOGO</a>
+        <a class="navbar-brand" href="/">LOGO</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,12 +33,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
-              <a class="nav-link mx-2" href="#!"
+              <a class="nav-link mx-2" href="../teacher/application.html"
                 ><i class="fas fa-heart pe-2"></i>成為教師</a
               >
             </li>
             <li class="nav-item ms-3">
-              <a class="btn btn-black btn-rounded" href="#!">登入</a>
+              <a class="btn btn-black btn-rounded" href="../user/signin.html"
+                >登入</a
+              >
             </li>
           </ul>
         </div>
@@ -129,7 +131,7 @@
       </form>
     </div>
     <!-- Footer -->
-    <footer class="footer text-center text-lg-start">
+    <footer class="footer text-center text-lg-start fixed-bottom">
       <!-- Copyright -->
       <div class="text-center p-3">© 2023 Copyright: RayChen</div>
     </footer>
