--- a/wwwroot/user/portal.html
+++ b/wwwroot/user/portal.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/form.css" />
-    <link rel="stylesheet" href="../css/admin-index.css" />
+    <link rel="stylesheet" href="../css/user-portal.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -41,11 +41,11 @@
     <!-- Links -->
 
     <div class="links-container">
-      <a href="../admin/teacher/applications.html" class="teacher-application"
-        ><button type="button" class="btn btn-policy">教師資格申請單</button></a
+      <a href="#" class="my-appointment"
+        ><button type="button" class="btn btn-policy">我的預約課程</button></a
       >
-      <a href="#" class="course-upload-application"
-        ><button type="button" class="btn btn-policy">課程上架申請單</button></a
+      <a href="./profile.html" class="my-member-profile"
+        ><button type="button" class="btn btn-policy">我的會員資料</button></a
       >
       <a href="#" class="signout"
         ><button type="button" class="btn btn-policy">登出</button></a
