--- a/wwwroot/user/profile.html
+++ b/wwwroot/user/profile.html
@@ -43,20 +43,10 @@
       </div>
     </nav>
 
-    <!-- Links -->
-
-    <div class="links-container">
-      <a href="#" class="my-appointment"
-        ><button type="button" class="btn btn-policy">我的預約課程</button></a
-      >
-      <a href="#" class="my-member-profile"
-        ><button type="button" class="btn btn-policy">我的會員資料</button></a
-      >
-      <a href="#" class="signout"
-        ><button type="button" class="btn btn-policy">登出</button></a
-      >
+    <!-- Form -->
+    <div class="form-container">
+      <h1 class="text-center">我的會員資料</h1>
     </div>
-
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
       <!-- Copyright -->
