--- a/wwwroot/user/signup.html
+++ b/wwwroot/user/signup.html
@@ -20,31 +20,21 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">LOGO</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-mdb-toggle="collapse"
-          data-mdb-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto align-items-center">
-            <li class="nav-item">
-              <a class="nav-link mx-2" href="../teacher/application.html"
-                ><i class="fas fa-heart pe-2"></i>成為教師</a
-              >
-            </li>
-            <li class="nav-item ms-3">
-              <a class="btn btn-black btn-rounded" href="../user/signin.html"
-                >登入</a
-              >
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-nav ms-auto align-items-center">
+          <li class="nav-item">
+            <a class="nav-link mx-2" href="teacher/application.html"
+              ><i class="fas fa-heart pe-2"></i>成為教師</a
+            >
+          </li>
+          <li class="nav-item ms-3">
+            <a
+              id="login-link"
+              class="btn btn-black btn-rounded"
+              href="user/signin.html"
+              >登入</a
+            >
+          </li>
+        </ul>
       </div>
     </nav>
 
