--- a/wwwroot/teacher/publish-course.html
+++ b/wwwroot/teacher/publish-course.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>刊登課程</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -19,21 +19,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">LOGO</a>
-        <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item">
-            <a class="nav-link mx-2" href="teacher/application.html"
-              ><i class="fas fa-heart pe-2"></i>成為教師</a
-            >
-          </li>
-          <li class="nav-item ms-3">
-            <a
-              id="login-link"
-              class="btn btn-black btn-rounded"
-              href="../user/signin.html"
-              >登入</a
-            >
-          </li>
-        </ul>
+        <ul class="navbar-nav ms-auto align-items-center"></ul>
       </div>
     </nav>
 
@@ -63,6 +49,14 @@
             class="form-control item"
             id="course-way"
             placeholder="授課方式"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="text"
+            class="form-control item"
+            id="course-language"
+            placeholder="授課語言"
           />
         </div>
         <div class="form-group">
