--- a/wwwroot/user/profile.html
+++ b/wwwroot/user/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>我的會員資料</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -34,7 +34,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
-              <a class="nav-link mx-2" href="../teacher/application.html"
+              <a
+                class="nav-link mx-2 teacher-application-link"
+                href="../application/form.html"
                 ><i class="fas fa-heart pe-2"></i>成為教師</a
               >
             </li>
@@ -74,4 +76,5 @@
   ></script>
   <!-- js file -->
   <script src="../js/user-profile.js"></script>
+  <script src="../js/apply-to-become-teacher.js"></script>
 </html>
