--- a/wwwroot/admin/index.html
+++ b/wwwroot/admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Admin</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -21,16 +21,11 @@
       <div class="container">
         <a class="navbar-brand" href="/">LOGO</a>
         <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item">
-            <a class="nav-link mx-2" href="teacher/application.html"
-              ><i class="fas fa-heart pe-2"></i>成為教師</a
-            >
-          </li>
           <li class="nav-item ms-3">
             <a
-              id="login-link"
+              id="signin-link"
               class="btn btn-black btn-rounded"
-              href="user/signin.html"
+              href="../user/signin.html"
               >登入</a
             >
           </li>
@@ -79,4 +74,5 @@
   ></script>
   <!-- js file -->
   <script src="../js/user-portal.js"></script>
+  <script src="../js/check-user-login-status.js"></script>
 </html>
