--- a/wwwroot/admin/teacher/applications.html
+++ b/wwwroot/admin/teacher/applications.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>教師資格申請單</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -20,21 +20,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">LOGO</a>
-        <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item">
-            <a class="nav-link mx-2" href="teacher/application.html"
-              ><i class="fas fa-heart pe-2"></i>成為教師</a
-            >
-          </li>
-          <li class="nav-item ms-3">
-            <a
-              id="login-link"
-              class="btn btn-black btn-rounded"
-              href="user/signin.html"
-              >登入</a
-            >
-          </li>
-        </ul>
+        <ul class="navbar-nav ms-auto align-items-center"></ul>
       </div>
     </nav>
 
