--- a/wwwroot/course/course-detail.html
+++ b/wwwroot/course/course-detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>會員入口</title>
+    <title>課程</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -12,8 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/form.css" />
-    <link rel="stylesheet" href="../css/user-portal.css" />
+    <link rel="stylesheet" href="../css/course-detail.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -28,22 +27,53 @@
               ><i class="fas fa-heart pe-2"></i>成為教師</a
             >
           </li>
+          <li class="nav-item ms-3">
+            <a
+              id="signin-link"
+              class="btn btn-black btn-rounded"
+              href="../user/signin.html"
+              >登入</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
 
-    <!-- Links -->
-
-    <div class="links-container">
-      <a href="./my-appointment.html" class="my-appointment"
-        ><button type="button" class="btn btn-policy">我的預約課程</button></a
-      >
-      <a href="./profile.html" class="my-member-profile"
-        ><button type="button" class="btn btn-policy">我的會員資料</button></a
-      >
-      <a href="#" class="signout"
-        ><button type="button" class="btn btn-policy">登出</button></a
-      >
+    <!-- Courses -->
+    <div class="course-container">
+      <div class="course-info-container">
+        <div class="image-section">
+          <img src="../assets/images/communication.jpg" alt="" />
+        </div>
+        <div class="course-deatil-section">
+          <p>課程名稱：</p>
+          <p>課程類別：</p>
+          <p>課程地點：</p>
+          <p>課程使用語言：</p>
+          <p>授課方式：</p>
+          <p>課程注意事項：</p>
+        </div>
+      </div>
+      <div class="course-available-time">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>開始時間</th>
+              <th>結束時間</th>
+              <th>價格</th>
+              <th>預約</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2023/08/30-15:00</td>
+              <td>2023/08/30-16:00</td>
+              <td>300</td>
+              <td><a href="booking.html" class="booking-link">預約</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <!-- Footer -->
@@ -72,6 +102,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/user-portal.js"></script>
+  <script src="../js/course-detail.js"></script>
   <script src="../js/apply-to-become-teacher.js"></script>
+  <script src="../js/check-user-login-status.js"></script>
 </html>
