--- a/wwwroot/course/search.html
+++ b/wwwroot/course/search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>教師入口</title>
+    <title>搜尋</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -11,32 +11,55 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/form.css" />
-    <link rel="stylesheet" href="../css/teacher-portal.css" />
+    <link rel="stylesheet" href="../css/course-search.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">LOGO</a>
-        <ul class="navbar-nav ms-auto align-items-center"></ul>
+        <ul class="navbar-nav ms-auto align-items-center">
+          <li class="nav-item">
+            <a
+              class="nav-link mx-2 teacher-application-link"
+              href="../application/form.html"
+              ><i class="fas fa-heart pe-2"></i>成為教師</a
+            >
+          </li>
+          <li class="nav-item ms-3">
+            <a
+              id="signin-link"
+              class="btn btn-black btn-rounded"
+              href="../user/signin.html"
+              >登入</a
+            >
+          </li>
+        </ul>
       </div>
     </nav>
 
-    <!-- Links -->
+    <!-- Search bar -->
+    <form id="searchForm">
+      <div class="search-bar-container">
+        <div class="main-search-input-wrap">
+          <div class="main-search-input fl-wrap">
+            <div class="main-search-input-item">
+              <input
+                id="main-search-input"
+                class="main-search-input"
+                type="text"
+                value=""
+                placeholder="輸入關鍵字..."
+              />
+            </div>
+            <button class="main-search-button">搜尋</button>
+          </div>
+        </div>
+      </div>
+    </form>
 
-    <div class="links-container">
-      <a href="./publish-course.html" class="course-information"
-        ><button type="button" class="btn btn-policy">刊登資訊</button></a
-      >
-      <a href="#" class="my-course"
-        ><button type="button" class="btn btn-policy">我的授課</button></a
-      >
-      <a href="#" class="my-dashboard"
-        ><button type="button" class="btn btn-policy">後台數據</button></a
-      >
-    </div>
+    <!-- Courses -->
+    <div class="courses-container"></div>
 
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
@@ -64,5 +87,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/user-portal.js"></script>
+  <script src="../js/course-search.js"></script>
+  <script src="../js/apply-to-become-teacher.js"></script>
+  <script src="../js/check-user-login-status.js"></script>
 </html>
