--- a/wwwroot/user/signin.html
+++ b/wwwroot/user/signin.html
@@ -21,16 +21,10 @@
         <a class="navbar-brand" href="/">LOGO</a>
         <ul class="navbar-nav ms-auto align-items-center">
           <li class="nav-item">
-            <a class="nav-link mx-2" href="teacher/application.html"
-              ><i class="fas fa-heart pe-2"></i>成為教師</a
-            >
-          </li>
-          <li class="nav-item ms-3">
             <a
-              id="login-link"
-              class="btn btn-black btn-rounded"
-              href="user/signin.html"
-              >登入</a
+              class="nav-link mx-2 teacher-application-link"
+              href="../application/form.html"
+              ><i class="fas fa-heart pe-2"></i>成為教師</a
             >
           </li>
         </ul>
@@ -92,4 +86,5 @@
   ></script>
   <!-- js file -->
   <script src="../js/user-signin.js"></script>
+  <script src="../js/apply-to-become-teacher.js"></script>
 </html>
