--- a/wwwroot/user/signup.html
+++ b/wwwroot/user/signup.html
@@ -22,15 +22,17 @@
         <a class="navbar-brand" href="/">LOGO</a>
         <ul class="navbar-nav ms-auto align-items-center">
           <li class="nav-item">
-            <a class="nav-link mx-2" href="teacher/application.html"
+            <a
+              class="nav-link mx-2 teacher-application-link"
+              href="../application/form.html"
               ><i class="fas fa-heart pe-2"></i>成為教師</a
             >
           </li>
           <li class="nav-item ms-3">
             <a
-              id="login-link"
+              id="signin-link"
               class="btn btn-black btn-rounded"
-              href="user/signin.html"
+              href="./signin.html"
               >登入</a
             >
           </li>
@@ -103,4 +105,6 @@
   ></script>
   <!-- js file -->
   <script src="../js/user-signup.js"></script>
+  <script src="../js/apply-to-become-teacher.js"></script>
+  <script src="../js/check-user-login-status.js"></script>
 </html>
