feat: finish display course on detail page

--- a/wwwroot/course/course-detail.html
+++ b/wwwroot/course/course-detail.html
@@ -45,7 +45,7 @@
         <div class="image-section">
           <img src="../assets/images/communication.jpg" alt="" />
         </div>
-        <div class="course-deatil-section">
+        <div class="course-detail-section">
           <p>課程名稱：</p>
           <p>課程類別：</p>
           <p>課程地點：</p>
