--- a/wwwroot/teacher/publish-course.html
+++ b/wwwroot/teacher/publish-course.html
@@ -71,6 +71,14 @@
           <textarea
             type="text"
             class="form-control item"
+            id="course-intro"
+            placeholder="課程詳細介紹"
+          ></textarea>
+        </div>
+        <div class="form-group">
+          <textarea
+            type="text"
+            class="form-control item"
             id="course-reminder"
             placeholder="課程注意事項"
           ></textarea>
