feat: finish shows user bookings on page and its flow

--- a/wwwroot/user/my-bookings.html
+++ b/wwwroot/user/my-bookings.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/form.css" />
     <link rel="stylesheet" href="../css/admin-teacher-applications.css" />
+    <link rel="stylesheet" href="../css/user-my-bookings.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -33,9 +34,7 @@
     </nav>
 
     <!-- Table -->
-    <div class="table-container">
-      <h2 class="text-center">教師資格申請單</h2>
-    </div>
+    <div class="table-container"></div>
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
       <!-- Copyright -->
@@ -62,6 +61,6 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/admin-teacher-applications.js"></script>
+  <script src="../js/my-bookings.js"></script>
   <script src="../js/apply-to-become-teacher.js"></script>
 </html>
