--- a/wwwroot/user/portal.html
+++ b/wwwroot/user/portal.html
@@ -35,7 +35,7 @@
     <!-- Links -->
 
     <div class="links-container">
-      <a href="./my-appointment.html" class="my-appointment"
+      <a href="./my-bookings.html" class="my-bookings"
         ><button type="button" class="btn btn-policy">我的預約課程</button></a
       >
       <a href="./profile.html" class="my-member-profile"
