feat: user can enter the online course

--- a/wwwroot/course/room.html
+++ b/wwwroot/course/room.html
@@ -62,5 +62,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.10/signalr.min.js"></script>
   <!-- Peerjs -->
   <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
-  <script src="./js/video.js"></script>
+  <script src="../js/online-course.js"></script>
 </html>
