--- a/wwwroot/teacher/edit-course.html
+++ b/wwwroot/teacher/edit-course.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>刊登課程</title>
+    <title>編輯課程</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
