feat: add admin page

--- a/wwwroot/admin/teacher/applications.html
+++ b/wwwroot/admin/teacher/applications.html
@@ -25,9 +25,7 @@
     </nav>
 
     <!-- Table -->
-    <div class="table-container">
-      <h2 class="text-center">教師資格申請單</h2>
-    </div>
+    <div class="table-container"></div>
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
       <!-- Copyright -->
