--- a/wwwroot/user/signup.html
+++ b/wwwroot/user/signup.html
@@ -19,7 +19,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/">LOGO</a>
+        <a class="navbar-brand" href="/"
+          ><img src="../assets/icons/Logo.png" alt="Logo"
+        /></a>
         <ul class="navbar-nav ms-auto align-items-center">
           <li class="nav-item">
             <a
