fix: adjust username to shows on chat

--- a/wwwroot/course/search.html
+++ b/wwwroot/course/search.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/course-search.css" />
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
     <!-- Navbar -->
