feat: add seeder

--- a/wwwroot/course/booking.html
+++ b/wwwroot/course/booking.html
@@ -43,41 +43,12 @@
     </nav>
 
     <!-- Booking -->
-    <div class="booking-container">
-      <div class="background">
-        <div class="row">
-          <div class="course-image-section col-4">
-            <img src="../assets/images/homepage-image.jpg" alt="" />
-          </div>
-          <div class="course-information-section col-8">
-            <div class="booking-info">
-              <h3>預約資訊：</h3>
-              <ul>
-                <li>開始時間：</li>
-                <li>結束時間：</li>
-                <li>價格：</li>
-              </ul>
-            </div>
-            <div class="course-detail">
-              <ul>
-                <li>課程名稱：</li>
-                <li>上課方式：</li>
-                <li>上課地點：</li>
-                <li>注意事項：</li>
-              </ul>
-            </div>
-            <div class="submit-button-container">
-              <button class="btn submit">確認</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="booking-container"></div>
 
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
       <!-- Copyright -->
-      <div class="text-center p-3">© 2023 Copyright: RayChen</div>
+      <div class="text-center p-3">© 2023 Copyright: OOcourse</div>
     </footer>
   </body>
   <!-- Bootstrap -->
