--- a/wwwroot/teacher/portal.html
+++ b/wwwroot/teacher/portal.html
@@ -48,7 +48,7 @@
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
       <!-- Copyright -->
-      <div class="text-center p-3">© 2023 Copyright: RayChen</div>
+      <div class="text-center p-3">© 2023 Copyright: OOcourse</div>
     </footer>
   </body>
   <!-- Bootstrap -->
