feat: add readme file

--- a/wwwroot/admin/index.html
+++ b/wwwroot/admin/index.html
@@ -73,5 +73,5 @@
   ></script>
   <!-- js file -->
   <script src="../js/user-portal.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
