--- a/wwwroot/application/form.html
+++ b/wwwroot/application/form.html
@@ -134,5 +134,5 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/teacher-application.js"></script>
+  <script type="module" src="../js/teacher-application.js"></script>
 </html>
