--- a/wwwroot/course.html
+++ b/wwwroot/course.html
@@ -95,7 +95,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/course.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/course.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
