--- a/wwwroot/course/offline.html
+++ b/wwwroot/course/offline.html
@@ -116,7 +116,7 @@
   <!-- Peerjs -->
   <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <!-- Js Files -->
-  <script src="../js/offline-course.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/offline-course.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
