--- a/wwwroot/course/online.html
+++ b/wwwroot/course/online.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="left-section col-8">
             <div class="roomId-container">
-              <h3>房間:xxxssss</h3>
+              <h5>房間:</h5>
             </div>
             <div class="video-container">
               <div class="video-grid"></div>
@@ -109,7 +109,7 @@
   <!-- Peerjs -->
   <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
   <!-- Js Files -->
-  <script src="../js/online-course.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/online-course.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
