--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -101,6 +101,6 @@
   ></script>
   <!-- js file -->
   <script src="js/index.js"></script>
-  <script src="js/apply-to-become-teacher.js"></script>
-  <script src="js/check-user-login-status.js"></script>
+  <script type="module" src="js/apply-to-become-teacher.js"></script>
+  <script type="module" src="js/check-user-login-status.js"></script>
 </html>
