--- a/wwwroot/linepay/confirm.html
+++ b/wwwroot/linepay/confirm.html
@@ -55,5 +55,5 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/linepay-confirm.js"></script>
+  <script type="module" src="../js/linepay-confirm.js"></script>
 </html>
