--- a/wwwroot/teacher/edit-course.html
+++ b/wwwroot/teacher/edit-course.html
@@ -53,5 +53,5 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/teacher-edit-course.js"></script>
+  <script type="module" src="../js/teacher-edit-course.js"></script>
 </html>
