--- a/wwwroot/teacher/publish-course.html
+++ b/wwwroot/teacher/publish-course.html
@@ -164,5 +164,5 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/teacher-publish-course.js"></script>
+  <script type="module" src="../js/teacher-publish-course.js"></script>
 </html>
