--- a/wwwroot/user/my-bookings.html
+++ b/wwwroot/user/my-bookings.html
@@ -63,6 +63,6 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/my-bookings.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/my-bookings.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
