--- a/wwwroot/user/signin.html
+++ b/wwwroot/user/signin.html
@@ -87,6 +87,6 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/user-signin.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/user-signin.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
