--- a/wwwroot/course/booking.html
+++ b/wwwroot/course/booking.html
@@ -71,7 +71,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/booking.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/booking.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
