--- a/wwwroot/course/search.html
+++ b/wwwroot/course/search.html
@@ -90,7 +90,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/course-search.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/course-search.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
