--- a/wwwroot/user/portal.html
+++ b/wwwroot/user/portal.html
@@ -74,6 +74,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/user-portal.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/config.js"></script>
+  <script type="module" src="../js/user-portal.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
