--- a/wwwroot/user/signup.html
+++ b/wwwroot/user/signup.html
@@ -106,7 +106,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
-  <script src="../js/user-signup.js"></script>
-  <script src="../js/apply-to-become-teacher.js"></script>
-  <script src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/user-signup.js"></script>
+  <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
