feat: add course access list and add error page

--- a/wwwroot/course/offline.html
+++ b/wwwroot/course/offline.html
@@ -45,26 +45,7 @@
     <main>
       <section class="room-main-page-container">
         <div class="row">
-          <div class="left-section">
-            <div class="background">
-              <div class="course-image-section">
-                <img src="../assets/images/homepage-image.jpg" alt="" />
-              </div>
-              <div class="course-information-section">
-                <div class="course-detail">
-                  <ul>
-                    <li>課程名稱：${course.courseName}</li>
-                    <li>開始時間：${course.startTime}</li>
-                    <li>結束時間：${course.endTime}</li>
-                    <li>上課方式：${course.courseWay}</li>
-                    <li>上課地點：${course.courseLocation}</li>
-                    <li>注意事項：${course.courseReminder}</li>
-                    <li>課程介紹：${course.courseIntro}</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="left-section"></div>
           <!-- message -->
           <div class="right-section">
             <h5>與教師通訊</h5>
