feat: add check admin role api and adjust some page authorization setting

--- a/wwwroot/admin/index.html
+++ b/wwwroot/admin/index.html
@@ -72,6 +72,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-admin-authorize.js"></script>
   <script src="../js/user-portal.js"></script>
   <script type="module" src="../js/check-user-login-status.js"></script>
 </html>
