--- a/wwwroot/admin/teacher/applications.html
+++ b/wwwroot/admin/teacher/applications.html
@@ -54,5 +54,6 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../../js/check-admin-authorize.js"></script>
   <script type="module" src="../../js/admin-teacher-applications.js"></script>
 </html>
