--- a/wwwroot/teacher/edit-course.html
+++ b/wwwroot/teacher/edit-course.html
@@ -53,5 +53,6 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-teacher-authorize.js"></script>
   <script type="module" src="../js/teacher-edit-course.js"></script>
 </html>
