--- a/wwwroot/teacher/my-courses.html
+++ b/wwwroot/teacher/my-courses.html
@@ -63,6 +63,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-teacher-authorize.js"></script>
   <script type="module" src="../js/my-courses.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
