--- a/wwwroot/teacher/portal.html
+++ b/wwwroot/teacher/portal.html
@@ -71,5 +71,6 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-teacher-authorize.js"></script>
   <script src="../js/user-portal.js"></script>
 </html>
