--- a/wwwroot/user/portal.html
+++ b/wwwroot/user/portal.html
@@ -75,6 +75,7 @@
   ></script>
   <!-- js file -->
   <script type="module" src="../js/config.js"></script>
+  <script type="module" src="../js/check-user-authorize.js"></script>
   <script type="module" src="../js/user-portal.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
