--- a/wwwroot/user/profile.html
+++ b/wwwroot/user/profile.html
@@ -64,6 +64,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-user-authorize.js"></script>
   <script type="module" src="../js/user-profile.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
