--- a/wwwroot/application/form.html
+++ b/wwwroot/application/form.html
@@ -35,6 +35,7 @@
             class="form-control item"
             id="name"
             placeholder="姓名"
+            required
           />
         </div>
         <div class="form-group">
@@ -43,6 +44,7 @@
             class="form-control item"
             id="email"
             placeholder="電子信箱"
+            required
           />
         </div>
         <div class="form-group">
@@ -51,6 +53,7 @@
             class="form-control item"
             id="country"
             placeholder="國籍"
+            required
           />
         </div>
         <div class="form-group">
@@ -59,6 +62,7 @@
             class="form-control item"
             id="location"
             placeholder="所在地"
+            required
           />
         </div>
         <div class="form-group">
@@ -67,6 +71,7 @@
             class="form-control item"
             id="language"
             placeholder="溝通語言"
+            required
           />
         </div>
         <div class="form-group">
@@ -75,6 +80,7 @@
             class="form-control item"
             id="category"
             placeholder="課程類別"
+            required
           />
         </div>
         <div class="form-group">
@@ -83,6 +89,7 @@
             class="form-control item"
             id="experience"
             placeholder="教學經驗"
+            required
           />
         </div>
         <div class="form-group">
@@ -91,6 +98,7 @@
             class="form-control item"
             id="description"
             placeholder="個人特色"
+            required
           ></textarea>
         </div>
         <div class="form-group">
@@ -134,5 +142,10 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script
+    type="module"
+    src="../js/check-teacher-role-for-application.js"
+  ></script>
+  <script type="module" src="../js/check-user-authorize.js"></script>
   <script type="module" src="../js/teacher-application.js"></script>
 </html>
