--- a/wwwroot/teacher/publish-course.html
+++ b/wwwroot/teacher/publish-course.html
@@ -35,6 +35,7 @@
             class="form-control item"
             id="course-name"
             placeholder="課程名稱"
+            required
           />
         </div>
         <div class="form-group">
@@ -43,6 +44,7 @@
             class="form-control item"
             id="course-category"
             placeholder="課程分類"
+            required
           />
         </div>
         <div class="form-group">
@@ -50,7 +52,8 @@
             type="text"
             class="form-control item"
             id="course-way"
-            placeholder="授課方式"
+            placeholder="授課方式(實體/線上)"
+            required
           />
         </div>
         <div class="form-group">
@@ -59,6 +62,7 @@
             class="form-control item"
             id="course-language"
             placeholder="授課語言"
+            required
           />
         </div>
         <div class="form-group">
@@ -67,6 +71,7 @@
             class="form-control item"
             id="course-location"
             placeholder="授課地點"
+            required
           />
         </div>
         <div class="form-group">
@@ -75,6 +80,7 @@
             class="form-control item"
             id="course-intro"
             placeholder="課程詳細介紹"
+            required
           ></textarea>
         </div>
         <div class="form-group">
@@ -83,6 +89,7 @@
             class="form-control item"
             id="course-reminder"
             placeholder="課程注意事項"
+            required
           ></textarea>
         </div>
         <div class="form-group">
@@ -164,5 +171,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-teacher-authorize.js"></script>
+  <script type="module" src="../js/check-teacher-course_exist.js"></script>
   <script type="module" src="../js/teacher-publish-course.js"></script>
 </html>
