--- a/wwwroot/user/my-bookings.html
+++ b/wwwroot/user/my-bookings.html
@@ -63,6 +63,7 @@
     referrerpolicy="no-referrer"
   ></script>
   <!-- js file -->
+  <script type="module" src="../js/check-user-authorize.js"></script>
   <script type="module" src="../js/my-bookings.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
 </html>
