--- a/wwwroot/user/signin.html
+++ b/wwwroot/user/signin.html
@@ -43,6 +43,7 @@
             class="form-control item"
             id="email"
             placeholder="電子信箱"
+            required
           />
         </div>
         <div class="form-group">
@@ -51,6 +52,7 @@
             class="form-control item"
             id="password"
             placeholder="密碼"
+            required
           />
         </div>
         <div class="form-group text-center">
