--- a/wwwroot/user/signup.html
+++ b/wwwroot/user/signup.html
@@ -52,6 +52,7 @@
             class="form-control item"
             id="email"
             placeholder="電子信箱"
+            required
           />
         </div>
         <div class="form-group">
@@ -60,6 +61,7 @@
             class="form-control item"
             id="password"
             placeholder="密碼"
+            required
           />
         </div>
         <div class="form-group">
@@ -68,6 +70,7 @@
             class="form-control item"
             id="checkPassword"
             placeholder="確認密碼"
+            required
           />
         </div>
         <div class="form-group text-center">
