--- a/wwwroot/teacher/dashboard.html
+++ b/wwwroot/teacher/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>教師入口</title>
+    <title>數據管理</title>
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -13,7 +13,12 @@
     />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/form.css" />
-    <link rel="stylesheet" href="../css/teacher-portal.css" />
+    <link rel="stylesheet" href="../css/teacher-dashboard.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"
+    />
   </head>
   <body>
     <!-- Navbar -->
@@ -26,23 +31,21 @@
       </div>
     </nav>
 
-    <!-- Links -->
-
-    <div class="links-container">
-      <a href="./publish-course.html" class="publish-course"
-        ><button type="button" class="btn btn-policy">刊登新課程</button></a
-      >
-      <a href="./edit-course.html" class="edit-course"
-        ><button type="button" class="btn btn-policy">
-          編輯課程、增加時段
-        </button></a
-      >
-      <a href="./my-courses.html" class="my-courses"
-        ><button type="button" class="btn btn-policy">我的授課</button></a
-      >
-      <a href="./dashboard.html" class="my-dashboard"
-        ><button type="button" class="btn btn-policy">後台數據</button></a
-      >
+    <!-- Dashboard -->
+    <div class="dashboard-container">
+      <label for="reportrange">時間區間</label>
+      <div class="reportrange" id="reportrange">
+        <span></span>
+      </div>
+      <div class="salary-data-container">
+        <p>收入：</p>
+      </div>
+      <div class="course-data-container">
+        <p>完成課程總數：</p>
+      </div>
+      <div class="other-data-container">
+        <p>其他資料：</p>
+      </div>
     </div>
 
     <!-- Footer -->
@@ -70,7 +73,17 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
+  <!-- moment -->
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"
+  ></script>
+  <!-- daterangepicker -->
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"
+  ></script>
   <!-- js file -->
   <script type="module" src="../js/check-teacher-authorize.js"></script>
-  <script src="../js/user-portal.js"></script>
+  <script type="module" src="../js/teacher-dashboard.js"></script>
 </html>
